version 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BIT_AND
    BIT_OR
    COMMA
    DEF
    EMP_LIST
    EMP_SET
    EMP_TUPLE
    EQEQ
    FLOWERCLOSE
    FLOWEROPEN
    IF
    LEVEL2
    LEVEL3
    MOD
    NAME
    NEWLINE
    NOTEQ
    OR

Grammar

Rule 0     S' -> expression
Rule 1     expression -> ID EQUAL expression
Rule 2     expression -> ID EQUAL STR_CONST
Rule 3     expression -> expression PLUS term
Rule 4     expression -> PRINT PARANOPEN STR_CONST PARANCLOSE
Rule 5     expression -> PRINT PARANOPEN ID PARANCLOSE
Rule 6     expression -> PRINT PARANOPEN term PARANCLOSE
Rule 7     expression -> expression MINUS term
Rule 8     expression -> MINUS term
Rule 9     expression -> term
Rule 10    term -> term MULTIPLY factor
Rule 11    term -> term DIVIDE factor
Rule 12    term -> factor
Rule 13    factor -> INT
Rule 14    factor -> FLOAT
Rule 15    factor -> PARANOPEN expression PARANCLOSE
Rule 16    expression -> whileloop
Rule 17    expression -> forloop
Rule 18    whileloop -> WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
Rule 19    whileloop -> WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
Rule 20    whileloop -> WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
Rule 21    whileloop -> WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
Rule 22    whileloop -> WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
Rule 23    whileloop -> WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
Rule 24    whileloop -> WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
Rule 25    whileloop -> WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
Rule 26    whileloop -> WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
Rule 27    whileloop -> WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
Rule 28    whileloop -> WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
Rule 29    whileloop -> WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
Rule 30    whileloop -> WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
Rule 31    whileloop -> WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
Rule 32    whileloop -> WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
Rule 33    whileloop -> WHILE BOOL COLON
Rule 34    whileloop -> WHILE STR_CONST COLON
Rule 35    whileloop -> WHILE factor COLON
Rule 36    whileloop -> WHILE ID COLON
Rule 37    forloop -> FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
Rule 38    forloop -> FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
Rule 39    forloop -> FOR ID IN STR_CONST COLON
Rule 40    forloop -> FOR ID IN ID COLON
Rule 41    forloop -> FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
Rule 42    expression -> LEVEL1 ID EQUAL INT
Rule 43    expression -> LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
Rule 44    expression -> LEVEL1 PRINT PARANOPEN ID PARANCLOSE
Rule 45    expression -> LEVEL1 PRINT PARANOPEN term PARANCLOSE
Rule 46    expression -> <empty>
Rule 47    expression -> HASH expression
Rule 48    expression -> HASH ID
Rule 49    expression -> HASH STR_CONST

Terminals, with rules where they appear

AND                  : 
BIT_AND              : 
BIT_OR               : 
BOOL                 : 33
COLON                : 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
COMMA                : 
DEF                  : 
DIVIDE               : 11
EMP_LIST             : 
EMP_SET              : 
EMP_TUPLE            : 
EQEQ                 : 
EQUAL                : 1 2 18 19 20 42
FLOAT                : 14
FLOWERCLOSE          : 
FLOWEROPEN           : 
FOR                  : 37 38 39 40 41
GREATER              : 21 22 23
GREATEREQ            : 24 25 26
HASH                 : 47 48 49
ID                   : 1 2 5 18 19 20 20 21 22 23 23 24 25 26 26 27 28 29 29 30 31 32 32 36 37 38 38 39 40 40 41 42 44 48
IF                   : 
IN                   : 37 38 39 40 41
INT                  : 13 42
LEN                  : 38
LESSER               : 27 28 29
LESSEREQ             : 30 31 32
LEVEL1               : 42 43 44 45
LEVEL2               : 
LEVEL3               : 
MINUS                : 7 8
MOD                  : 
MULTIPLY             : 10
NAME                 : 
NEWLINE              : 
NOTEQ                : 
OR                   : 
PARANCLOSE           : 4 5 6 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 37 38 38 41 43 44 45
PARANOPEN            : 4 5 6 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 37 38 38 41 43 44 45
PLUS                 : 3
PRINT                : 4 5 6 43 44 45
RANGE                : 37 38
STR_CONST            : 2 4 19 22 25 28 31 34 39 41 43 49
WHILE                : 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
error                : 

Nonterminals, with rules where they appear

expression           : 1 3 7 15 47 0
factor               : 10 11 12 18 21 24 27 30 35
forloop              : 17
term                 : 3 6 7 8 9 10 11 37 45
whileloop            : 16

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL STR_CONST
    (3) expression -> . expression PLUS term
    (4) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (5) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (6) expression -> . PRINT PARANOPEN term PARANCLOSE
    (7) expression -> . expression MINUS term
    (8) expression -> . MINUS term
    (9) expression -> . term
    (16) expression -> . whileloop
    (17) expression -> . forloop
    (42) expression -> . LEVEL1 ID EQUAL INT
    (43) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (45) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (46) expression -> .
    (47) expression -> . HASH expression
    (48) expression -> . HASH ID
    (49) expression -> . HASH STR_CONST
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (18) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (19) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (20) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (21) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (22) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (23) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (24) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (25) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (26) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (27) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (28) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (29) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (30) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (31) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (32) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (33) whileloop -> . WHILE BOOL COLON
    (34) whileloop -> . WHILE STR_CONST COLON
    (35) whileloop -> . WHILE factor COLON
    (36) whileloop -> . WHILE ID COLON
    (37) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (38) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (39) forloop -> . FOR ID IN STR_CONST COLON
    (40) forloop -> . FOR ID IN ID COLON
    (41) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

  ! shift/reduce conflict for MINUS resolved as shift
    ID              shift and go to state 2
    PRINT           shift and go to state 4
    MINUS           shift and go to state 6
    LEVEL1          shift and go to state 9
    PLUS            reduce using rule 46 (expression -> .)
    $end            reduce using rule 46 (expression -> .)
    HASH            shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

  ! MINUS           [ reduce using rule 46 (expression -> .) ]

    expression                     shift and go to state 1
    term                           shift and go to state 3
    whileloop                      shift and go to state 7
    forloop                        shift and go to state 8
    factor                         shift and go to state 12

state 1

    (0) S' -> expression .
    (3) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    PLUS            shift and go to state 16
    MINUS           shift and go to state 17


state 2

    (1) expression -> ID . EQUAL expression
    (2) expression -> ID . EQUAL STR_CONST

    EQUAL           shift and go to state 18


state 3

    (9) expression -> term .
    (10) term -> term . MULTIPLY factor
    (11) term -> term . DIVIDE factor

    PLUS            reduce using rule 9 (expression -> term .)
    MINUS           reduce using rule 9 (expression -> term .)
    $end            reduce using rule 9 (expression -> term .)
    PARANCLOSE      reduce using rule 9 (expression -> term .)
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20


state 4

    (4) expression -> PRINT . PARANOPEN STR_CONST PARANCLOSE
    (5) expression -> PRINT . PARANOPEN ID PARANCLOSE
    (6) expression -> PRINT . PARANOPEN term PARANCLOSE

    PARANOPEN       shift and go to state 21


state 5

    (15) factor -> PARANOPEN . expression PARANCLOSE
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL STR_CONST
    (3) expression -> . expression PLUS term
    (4) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (5) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (6) expression -> . PRINT PARANOPEN term PARANCLOSE
    (7) expression -> . expression MINUS term
    (8) expression -> . MINUS term
    (9) expression -> . term
    (16) expression -> . whileloop
    (17) expression -> . forloop
    (42) expression -> . LEVEL1 ID EQUAL INT
    (43) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (45) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (46) expression -> .
    (47) expression -> . HASH expression
    (48) expression -> . HASH ID
    (49) expression -> . HASH STR_CONST
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (18) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (19) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (20) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (21) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (22) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (23) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (24) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (25) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (26) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (27) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (28) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (29) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (30) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (31) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (32) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (33) whileloop -> . WHILE BOOL COLON
    (34) whileloop -> . WHILE STR_CONST COLON
    (35) whileloop -> . WHILE factor COLON
    (36) whileloop -> . WHILE ID COLON
    (37) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (38) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (39) forloop -> . FOR ID IN STR_CONST COLON
    (40) forloop -> . FOR ID IN ID COLON
    (41) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

  ! shift/reduce conflict for MINUS resolved as shift
    ID              shift and go to state 2
    PRINT           shift and go to state 4
    MINUS           shift and go to state 6
    LEVEL1          shift and go to state 9
    PARANCLOSE      reduce using rule 46 (expression -> .)
    PLUS            reduce using rule 46 (expression -> .)
    HASH            shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

  ! MINUS           [ reduce using rule 46 (expression -> .) ]

    expression                     shift and go to state 22
    term                           shift and go to state 3
    whileloop                      shift and go to state 7
    forloop                        shift and go to state 8
    factor                         shift and go to state 12

state 6

    (8) expression -> MINUS . term
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    term                           shift and go to state 23
    factor                         shift and go to state 12

state 7

    (16) expression -> whileloop .

    PLUS            reduce using rule 16 (expression -> whileloop .)
    MINUS           reduce using rule 16 (expression -> whileloop .)
    $end            reduce using rule 16 (expression -> whileloop .)
    PARANCLOSE      reduce using rule 16 (expression -> whileloop .)


state 8

    (17) expression -> forloop .

    PLUS            reduce using rule 17 (expression -> forloop .)
    MINUS           reduce using rule 17 (expression -> forloop .)
    $end            reduce using rule 17 (expression -> forloop .)
    PARANCLOSE      reduce using rule 17 (expression -> forloop .)


state 9

    (42) expression -> LEVEL1 . ID EQUAL INT
    (43) expression -> LEVEL1 . PRINT PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> LEVEL1 . PRINT PARANOPEN ID PARANCLOSE
    (45) expression -> LEVEL1 . PRINT PARANOPEN term PARANCLOSE

    ID              shift and go to state 24
    PRINT           shift and go to state 25


state 10

    (13) factor -> INT .

    MULTIPLY        reduce using rule 13 (factor -> INT .)
    DIVIDE          reduce using rule 13 (factor -> INT .)
    PLUS            reduce using rule 13 (factor -> INT .)
    MINUS           reduce using rule 13 (factor -> INT .)
    $end            reduce using rule 13 (factor -> INT .)
    PARANCLOSE      reduce using rule 13 (factor -> INT .)
    COLON           reduce using rule 13 (factor -> INT .)


state 11

    (47) expression -> HASH . expression
    (48) expression -> HASH . ID
    (49) expression -> HASH . STR_CONST
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL STR_CONST
    (3) expression -> . expression PLUS term
    (4) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (5) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (6) expression -> . PRINT PARANOPEN term PARANCLOSE
    (7) expression -> . expression MINUS term
    (8) expression -> . MINUS term
    (9) expression -> . term
    (16) expression -> . whileloop
    (17) expression -> . forloop
    (42) expression -> . LEVEL1 ID EQUAL INT
    (43) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (45) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (46) expression -> .
    (47) expression -> . HASH expression
    (48) expression -> . HASH ID
    (49) expression -> . HASH STR_CONST
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (18) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (19) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (20) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (21) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (22) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (23) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (24) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (25) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (26) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (27) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (28) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (29) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (30) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (31) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (32) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (33) whileloop -> . WHILE BOOL COLON
    (34) whileloop -> . WHILE STR_CONST COLON
    (35) whileloop -> . WHILE factor COLON
    (36) whileloop -> . WHILE ID COLON
    (37) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (38) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (39) forloop -> . FOR ID IN STR_CONST COLON
    (40) forloop -> . FOR ID IN ID COLON
    (41) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

  ! shift/reduce conflict for MINUS resolved as shift
    ID              shift and go to state 27
    STR_CONST       shift and go to state 28
    PRINT           shift and go to state 4
    MINUS           shift and go to state 6
    LEVEL1          shift and go to state 9
    PLUS            reduce using rule 46 (expression -> .)
    $end            reduce using rule 46 (expression -> .)
    PARANCLOSE      reduce using rule 46 (expression -> .)
    HASH            shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

  ! MINUS           [ reduce using rule 46 (expression -> .) ]

    expression                     shift and go to state 26
    term                           shift and go to state 3
    whileloop                      shift and go to state 7
    forloop                        shift and go to state 8
    factor                         shift and go to state 12

state 12

    (12) term -> factor .

    MULTIPLY        reduce using rule 12 (term -> factor .)
    DIVIDE          reduce using rule 12 (term -> factor .)
    PLUS            reduce using rule 12 (term -> factor .)
    MINUS           reduce using rule 12 (term -> factor .)
    $end            reduce using rule 12 (term -> factor .)
    PARANCLOSE      reduce using rule 12 (term -> factor .)


state 13

    (18) whileloop -> WHILE . PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (19) whileloop -> WHILE . PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (20) whileloop -> WHILE . PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (21) whileloop -> WHILE . PARANOPEN ID GREATER factor PARANCLOSE COLON
    (22) whileloop -> WHILE . PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (23) whileloop -> WHILE . PARANOPEN ID GREATER ID PARANCLOSE COLON
    (24) whileloop -> WHILE . PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (25) whileloop -> WHILE . PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (26) whileloop -> WHILE . PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (27) whileloop -> WHILE . PARANOPEN ID LESSER factor PARANCLOSE COLON
    (28) whileloop -> WHILE . PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (29) whileloop -> WHILE . PARANOPEN ID LESSER ID PARANCLOSE COLON
    (30) whileloop -> WHILE . PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (31) whileloop -> WHILE . PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (32) whileloop -> WHILE . PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (33) whileloop -> WHILE . BOOL COLON
    (34) whileloop -> WHILE . STR_CONST COLON
    (35) whileloop -> WHILE . factor COLON
    (36) whileloop -> WHILE . ID COLON
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    PARANOPEN       shift and go to state 29
    BOOL            shift and go to state 33
    STR_CONST       shift and go to state 32
    ID              shift and go to state 30
    INT             shift and go to state 10
    FLOAT           shift and go to state 15

    factor                         shift and go to state 31

state 14

    (37) forloop -> FOR . ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (38) forloop -> FOR . ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (39) forloop -> FOR . ID IN STR_CONST COLON
    (40) forloop -> FOR . ID IN ID COLON
    (41) forloop -> FOR . ID IN PARANOPEN STR_CONST PARANCLOSE COLON

    ID              shift and go to state 34


state 15

    (14) factor -> FLOAT .

    MULTIPLY        reduce using rule 14 (factor -> FLOAT .)
    DIVIDE          reduce using rule 14 (factor -> FLOAT .)
    PLUS            reduce using rule 14 (factor -> FLOAT .)
    MINUS           reduce using rule 14 (factor -> FLOAT .)
    $end            reduce using rule 14 (factor -> FLOAT .)
    PARANCLOSE      reduce using rule 14 (factor -> FLOAT .)
    COLON           reduce using rule 14 (factor -> FLOAT .)


state 16

    (3) expression -> expression PLUS . term
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    term                           shift and go to state 35
    factor                         shift and go to state 12

state 17

    (7) expression -> expression MINUS . term
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    term                           shift and go to state 36
    factor                         shift and go to state 12

state 18

    (1) expression -> ID EQUAL . expression
    (2) expression -> ID EQUAL . STR_CONST
    (1) expression -> . ID EQUAL expression
    (2) expression -> . ID EQUAL STR_CONST
    (3) expression -> . expression PLUS term
    (4) expression -> . PRINT PARANOPEN STR_CONST PARANCLOSE
    (5) expression -> . PRINT PARANOPEN ID PARANCLOSE
    (6) expression -> . PRINT PARANOPEN term PARANCLOSE
    (7) expression -> . expression MINUS term
    (8) expression -> . MINUS term
    (9) expression -> . term
    (16) expression -> . whileloop
    (17) expression -> . forloop
    (42) expression -> . LEVEL1 ID EQUAL INT
    (43) expression -> . LEVEL1 PRINT PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> . LEVEL1 PRINT PARANOPEN ID PARANCLOSE
    (45) expression -> . LEVEL1 PRINT PARANOPEN term PARANCLOSE
    (46) expression -> .
    (47) expression -> . HASH expression
    (48) expression -> . HASH ID
    (49) expression -> . HASH STR_CONST
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (18) whileloop -> . WHILE PARANOPEN ID EQUAL factor PARANCLOSE COLON
    (19) whileloop -> . WHILE PARANOPEN ID EQUAL STR_CONST PARANCLOSE COLON
    (20) whileloop -> . WHILE PARANOPEN ID EQUAL ID PARANCLOSE COLON
    (21) whileloop -> . WHILE PARANOPEN ID GREATER factor PARANCLOSE COLON
    (22) whileloop -> . WHILE PARANOPEN ID GREATER STR_CONST PARANCLOSE COLON
    (23) whileloop -> . WHILE PARANOPEN ID GREATER ID PARANCLOSE COLON
    (24) whileloop -> . WHILE PARANOPEN ID GREATEREQ factor PARANCLOSE COLON
    (25) whileloop -> . WHILE PARANOPEN ID GREATEREQ STR_CONST PARANCLOSE COLON
    (26) whileloop -> . WHILE PARANOPEN ID GREATEREQ ID PARANCLOSE COLON
    (27) whileloop -> . WHILE PARANOPEN ID LESSER factor PARANCLOSE COLON
    (28) whileloop -> . WHILE PARANOPEN ID LESSER STR_CONST PARANCLOSE COLON
    (29) whileloop -> . WHILE PARANOPEN ID LESSER ID PARANCLOSE COLON
    (30) whileloop -> . WHILE PARANOPEN ID LESSEREQ factor PARANCLOSE COLON
    (31) whileloop -> . WHILE PARANOPEN ID LESSEREQ STR_CONST PARANCLOSE COLON
    (32) whileloop -> . WHILE PARANOPEN ID LESSEREQ ID PARANCLOSE COLON
    (33) whileloop -> . WHILE BOOL COLON
    (34) whileloop -> . WHILE STR_CONST COLON
    (35) whileloop -> . WHILE factor COLON
    (36) whileloop -> . WHILE ID COLON
    (37) forloop -> . FOR ID IN RANGE PARANOPEN term PARANCLOSE COLON
    (38) forloop -> . FOR ID IN RANGE PARANOPEN LEN PARANOPEN ID PARANCLOSE PARANCLOSE COLON
    (39) forloop -> . FOR ID IN STR_CONST COLON
    (40) forloop -> . FOR ID IN ID COLON
    (41) forloop -> . FOR ID IN PARANOPEN STR_CONST PARANCLOSE COLON
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

  ! shift/reduce conflict for MINUS resolved as shift
    STR_CONST       shift and go to state 38
    ID              shift and go to state 2
    PRINT           shift and go to state 4
    MINUS           shift and go to state 6
    LEVEL1          shift and go to state 9
    PLUS            reduce using rule 46 (expression -> .)
    $end            reduce using rule 46 (expression -> .)
    PARANCLOSE      reduce using rule 46 (expression -> .)
    HASH            shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

  ! MINUS           [ reduce using rule 46 (expression -> .) ]

    expression                     shift and go to state 37
    term                           shift and go to state 3
    whileloop                      shift and go to state 7
    forloop                        shift and go to state 8
    factor                         shift and go to state 12

state 19

    (10) term -> term MULTIPLY . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    factor                         shift and go to state 39

state 20

    (11) term -> term DIVIDE . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    factor                         shift and go to state 40

state 21

    (4) expression -> PRINT PARANOPEN . STR_CONST PARANCLOSE
    (5) expression -> PRINT PARANOPEN . ID PARANCLOSE
    (6) expression -> PRINT PARANOPEN . term PARANCLOSE
    (10) term -> . term MULTIPLY factor
    (11) term -> . term DIVIDE factor
    (12) term -> . factor
    (13) factor -> . INT
    (14) factor -> . FLOAT
    (15) factor -> . PARANOPEN expression PARANCLOSE

    STR_CONST       shift and go to state 41
    ID              shift and go to state 42
    INT             shift and go to state 10
    FLOAT           shift and go to state 15
    PARANOPEN       shift and go to state 5

    term                           shift and go to state 43
    factor                         shift and go to state 12

state 22

    (15) factor -> PARANOPEN expression . PARANCLOSE
    (3) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

    PARANCLOSE      shift and go to state 44
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17


state 23

    (8) expression -> MINUS term .
    (10) term -> term . MULTIPLY factor
    (11) term -> term . DIVIDE factor

    PLUS            reduce using rule 8 (expression -> MINUS term .)
    MINUS           reduce using rule 8 (expression -> MINUS term .)
    $end            reduce using rule 8 (expression -> MINUS term .)
    PARANCLOSE      reduce using rule 8 (expression -> MINUS term .)
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20


state 24

    (42) expression -> LEVEL1 ID . EQUAL INT

    EQUAL           shift and go to state 45


state 25

    (43) expression -> LEVEL1 PRINT . PARANOPEN STR_CONST PARANCLOSE
    (44) expression -> LEVEL1 PRINT . PARANOPEN ID PARANCLOSE
    (45) expression -> LEVEL1 PRINT . PARANOPEN term PARANCLOSE

    PARANOPEN       shift and go to state 46


state 26

    (47) expression -> HASH expression .
    (3) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    $end            reduce using rule 47 (expression -> HASH expression .)
    PARANCLOSE      reduce using rule 47 (expression -> HASH expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17

  ! PLUS            [ reduce using rule 47 (expression -> HASH expression .) ]
  ! MINUS           [ reduce using rule 47 (expression -> HASH expression .) ]


state 27

    (48) expression -> HASH ID .
    (1) expression -> ID . EQUAL expression
    (2) expression -> ID . EQUAL STR_CONST
